--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -14,3 +14,5 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.h2.console.path=/h2-console
 #spring.h2.console.settings.trace=true
 #spring.h2.console.settings.web-allow-others=true
+
+security.user.password=reflec.t
