--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,5 +8,6 @@ spring.jpa.defer-datasource-initialization=true
 #spring.sql.init.mode=always
 spring.jpa.hibernate.ddl-auto=create-drop
 
+logging.level.org.springframework.web=debug
 #spring.security.user.name=user
 #spring.security.user.password=user
