--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,13 +1,15 @@
+spring.security.user.name=nick
+spring.security.user.password=avlo
+spring.datasource.username=sa
+spring.datasource.password=
+logging.level.web=debug
+logging.level.org.springframework.security.web.FilterChainProxy=DEBUG
+logging.level.org.springframework.web=DEBUG
+spring.mvc.log-request-details=true
 spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:testdb
 spring.datasource.driverClassName=org.h2.Driver
-#spring.datasource.username=sa
-#spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.defer-datasource-initialization=true
-#spring.sql.init.mode=always
 spring.jpa.hibernate.ddl-auto=create-drop
 
-logging.level.org.springframework.web=debug
-#spring.security.user.name=user
-#spring.security.user.password=user
+spring.thymeleaf.prefix=classpath:/templates/
