--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,10 @@
+#openjdk version "20.0.1" 2023-04-18
+#OpenJDK Runtime Environment (build 20.0.1+9-29)
+#OpenJDK 64-Bit Server VM (build 20.0.1+9-29, mixed mode, sharing)
+#Apache Maven 3.9.2 (c9616018c7a021c1c39be70fb2843d6f5f9b8a1c)
+#Maven home: /home/nick/.sdkman/candidates/maven/current
+#Java version: 20.0.1, vendor: Oracle Corporation, runtime: /home/nick/.sdkman/candidates/java/20.0.1-open
+
 spring.security.user.name=nick
 spring.security.user.password=avlo
 spring.datasource.username=sa
