backend user retrieval working.  boom!"

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,9 +5,9 @@
 #Java version: 20.0.1, vendor: Oracle Corporation, runtime: /home/nick/.sdkman/candidates/java/20.0.1-open
 #Maven home: /home/nick/.sdkman/candidates/maven/current
 
-logging.level.org.springframework.security.web.FilterChainProxy=DEBUG
-logging.level.org.springframework.web=DEBUG
-logging.level.web=debug
+#logging.level.root=DEBUG
+#logging.level.sql=DEBUG
+#logging.level.web=debug
 
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
@@ -23,3 +23,4 @@ spring.security.user.name=nick
 spring.security.user.password=avlo
 
 spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
