fully functioning spring boot 3.1.0 spring security 6.0.1 user authentication and authorization

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -19,8 +19,11 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.defer-datasource-initialization=true
 spring.jpa.hibernate.ddl-auto=create-drop
 
-spring.security.user.name=nick
-spring.security.user.password=avlo
+# TODO: below needs proper configuration, not working as expected
+#   for now, user creation done in WebSecurityConfig
+spring.security.user.name=superuser
+spring.security.user.password=superpass
+spring.security.user.roles=USER
 
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
