--- a/src/test/resources/application.properties
+++ b/src/test/resources/application.properties
@@ -1,18 +1,22 @@
-#server.port=8080
-#server.error.whitelabel.enabled=false
+spring.datasource.driverClassName=org.h2.Driver
+spring.datasource.password=
+spring.datasource.url=jdbc:h2:~/temp;AUTO_SERVER=TRUE
+spring.datasource.username=sa
 
 spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:~/temp;AUTO_SERVER=TRUE
+spring.h2.console.path=/h2-console
 
-spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 #spring.jpa.defer-datasource-initialization=true
-#spring.sql.init.mode=always
 spring.jpa.hibernate.ddl-auto=create-drop
-spring.h2.console.path=/h2-console
-#spring.h2.console.settings.trace=true
-#spring.h2.console.settings.web-allow-others=true
 
-security.user.password=reflec.t
+# TODO: below needs proper configuration, not working as expected
+#   for now, user creation done in WebSecurityConfig
+spring.security.user.name=superuser
+spring.security.user.password=superpass
+spring.security.user.roles=USER
+
+#spring.sql.init.mode=always
+
+spring.thymeleaf.prefix=classpath:/templates/
+spring.thymeleaf.suffix=.html
