persistent user session & join table save

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@
 #Java version: 20.0.1, vendor: Oracle Corporation, runtime: /home/nick/.sdkman/candidates/java/20.0.1-open
 #Maven home: /home/nick/.sdkman/candidates/maven/current
 
-#logging.level.root=DEBUG
+logging.level.root=INFO
 #logging.level.sql=DEBUG
 #logging.level.web=debug
 
