--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,29 +1,18 @@
-#OpenJDK 64-Bit Server VM (build 20.0.1+9-29, mixed mode, sharing)
-#OpenJDK Runtime Environment (build 20.0.1+9-29)
-#openjdk version "20.0.1" 2023-04-18
-#Apache Maven 3.9.2 (c9616018c7a021c1c39be70fb2843d6f5f9b8a1c)
-#Java version: 20.0.1, vendor: Oracle Corporation, runtime: /home/nick/.sdkman/candidates/java/20.0.1-open
-#Maven home: /home/nick/.sdkman/candidates/maven/current
+environmentlabel=Matrix
 
-logging.level.root=INFO
-#logging.level.sql=DEBUG
-#logging.level.web=debug
+#logging.level.org.springframework.security.web.FilterChainProxy=DEBUG
 
+# CORE DB configuration (override-able via custom DB settings)
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=sa
 spring.datasource.password=
 
 spring.h2.console.enabled=true
 
+# SECURITY - CORE
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.defer-datasource-initialization=true
 spring.jpa.hibernate.ddl-auto=create-drop
-
-# TODO: below needs proper configuration, not working as expected
-#   for now, user creation done in WebSecurityConfig
-spring.security.user.name=configfileuser
-spring.security.user.password=configfilepass
-spring.security.user.roles=USER
 
 spring.thymeleaf.prefix=classpath:/templates/
 spring.thymeleaf.suffix=.html
