commensurate updates for cad3 compatibility

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-environmentlabel=Matrix
+environmentlabel=Smart-Contract Decision Matrix
 
 #logging.level.org.springframework.security.web.FilterChainProxy=DEBUG
 
