--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,18 +1,18 @@
 environmentlabel=Smart-Contract Decision Matrix
 
-#logging.level.org.springframework.security.web.FilterChainProxy=DEBUG
-
-# CORE DB configuration (override-able via custom DB settings)
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_ON_EXIT=TRUE
 spring.datasource.driverClassName=org.h2.Driver
-spring.datasource.username=sa
-spring.datasource.password=
+spring.datasource.username=jpa_appuser
+spring.datasource.password=jpa_appuserpass
 
 spring.h2.console.enabled=true
+spring.h2.console.path=/h2-console
 
 # SECURITY - CORE
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 spring.jpa.defer-datasource-initialization=true
 spring.jpa.hibernate.ddl-auto=create-drop
 
-spring.thymeleaf.prefix=classpath:/templates/
-spring.thymeleaf.suffix=.html
+spring.security.user.name=configfileuser
+spring.security.user.password=configfilepass
+spring.security.user.roles=USER
