--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -16,3 +16,7 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.security.user.name=configfileuser
 spring.security.user.password=configfilepass
 spring.security.user.roles=USER
+
+# TODO: refactor below + ContractDefaultLoginHandler key=value into cad3 framework
+scd.login.url.successful=/contract/display_all
+#scd.login.url.failure=/error
