--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 environmentlabel=Smart-Contract Decision Matrix
 
+nostr.port=8081
+nostr.file.nostr-request-string=nostr-request-string.txt
+
 spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_ON_EXIT=TRUE
 spring.datasource.driverClassName=org.h2.Driver
 spring.datasource.username=jpa_appuser
